crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__bom_unsorted.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
bom_unsorted.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 |   ﻿import foo
  |  _^
2 | | import bar
  |
  = help: Organize imports

ℹ Fix
1   |-﻿import foo
2   |-import bar
  1 |+﻿import bar
  2 |+import foo


