crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__case_sensitive.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
case_sensitive.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / import os
2 | | import Pandas as pd
3 | | import Pandas
4 | | import Xml.etree.ElementTree as ET
5 | | import requests
6 | | from datetime import datetime
  |
  = help: Organize imports

ℹ Fix
1 1 | import os
2   |-import Pandas as pd
  2 |+from datetime import datetime
  3 |+
3 4 | import Pandas
  5 |+import Pandas as pd
4 6 | import Xml.etree.ElementTree as ET
5 7 | import requests
6   |-from datetime import datetime


