crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__case_sensitive_case_sensitive.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
case_sensitive.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / import os
2 | | import Pandas
3 | | import Xml.etree.ElementTree as ET
4 | | import requests
5 | | from datetime import datetime
6 | | 
7 | | from module import Class, CONSTANT, function, BASIC, Apple
  |
  = help: Organize imports

ℹ Fix
1 1 | import os
  2 |+from datetime import datetime
  3 |+
2 4 | import Pandas
3 5 | import Xml.etree.ElementTree as ET
4 6 | import requests
5   |-from datetime import datetime
6   |-
7   |-from module import Class, CONSTANT, function, BASIC, Apple
  7 |+from module import BASIC, CONSTANT, Apple, Class, function


