crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__closest_to_furthest_relative_imports_order.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    commit: Organize imports
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 4
    column: 0
  fix:
    content: "from . import c\nfrom .. import b\nfrom ... import a\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 4
      column: 0
  parent: ~

