crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__combine_as_imports_combine_as_imports.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
./resources/test/fixtures/isort/combine_as_imports.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / from module import Class as C
2 | | from module import CONSTANT
3 | | from module import function
4 | | from module import function as f
  |
  = help: Organize imports

ℹ Suggested fix
1   |-from module import Class as C
2   |-from module import CONSTANT
3   |-from module import function
4   |-from module import function as f
  1 |+from module import CONSTANT, Class as C, function, function as f


