crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__combine_import_from.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- kind:
    name: UnsortedImports
    body: Import block is un-sorted or un-formatted
    commit: Organize imports
    fixable: true
  location:
    row: 1
    column: 0
  end_location:
    row: 6
    column: 0
  fix:
    content: "from collections import (\n    AsyncIterable,\n    Awaitable,\n    ChainMap,\n    Collection,\n    MutableMapping,\n    MutableSequence,\n)\n"
    location:
      row: 1
      column: 0
    end_location:
      row: 6
      column: 0
  parent: ~

