crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__combined_required_imports_docstring.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
./resources/test/fixtures/isort/required_imports/docstring.py:1:1: I002 [*] Missing required import: `from __future__ import annotations`
  |
1 | """Hello, world!"""
  |  I002
2 | 
3 | x = 1
  |
  = help: Insert required import: `from future import annotations`

ℹ Suggested fix
1 1 | """Hello, world!"""
  2 |+from __future__ import annotations
2 3 | 
3 4 | x = 1

./resources/test/fixtures/isort/required_imports/docstring.py:1:1: I002 [*] Missing required import: `from __future__ import generator_stop`
  |
1 | """Hello, world!"""
  |  I002
2 | 
3 | x = 1
  |
  = help: Insert required import: `from future import generator_stop`

ℹ Suggested fix
1 1 | """Hello, world!"""
  2 |+from __future__ import generator_stop
2 3 | 
3 4 | x = 1


